# Autonomous_Forge

./: .gitignore  README.md  pyproject.toml
.ai/: AUTONOMOUS_CHANGELOG.md  AUTONOMOUS_PLAN.md  AUTONOMOUS_STATE.md  DECISIONS.md
.forge/: config.toml  policy.md
.githooks/: pre-commit
docs/: COMMANDS.md  HEALTH_INVENTORY.md  POLICY.md  RUN_SUMMARIES.md
src/autonomous_forge/: __main__.py  check.py  cli.py  commit.py  config.py  context.py  diffcheck.py  doctor.py  drift.py  export.py  init.py  inventory.py  lock.py  log.py  mark.py  metrics.py  pipeline.py  plan.py  planadd.py  policy.py  push.py  report.py  run.py  run_summary.py  session.py  status.py  sync.py  validate.py  watch.py
tests/: test_check.py  test_cli.py  test_commit.py  test_config.py  test_context.py  test_diffcheck.py  test_doctor.py  test_drift.py  test_export.py  test_init.py  test_inventory.py  test_lock.py  test_log.py  test_mark.py  test_metrics.py  test_pipeline.py  test_plan.py  test_planadd.py  test_policy.py  test_push.py  test_run.py  test_session.py  test_status.py  test_sync.py  test_validate.py  test_watch.py
